[package]
name = "cgl-src"
version = "0.2.6+0.60.8"
edition = "2021"
build = "build.rs"
links = "Cgl"
license = "Apache-2.0"
description = "Redistribution of Coin-OR Cgl as a crate"
documentation = "https://docs.rs/cgl-src/"
repository = "https://github.com/Maroon502/cgl-src.git"
keywords = ["coin-or", "Cgl", "Cgl-src"]
readme = "README.md"
authors = [
    "Maroon502<maroon502@outlook.com>"
]
exclude = [
    "Cgl/**/*",
    "!Cgl/Cgl/src/**/*",
    "!**/LICENSE",
    "!**/AUTHORS",
]

[features]
default = ["default_cuts", "with_clp"]
with_clp = ["clp-src/osiclp"]

default_cuts = ["CglAllDifferent","CglClique", "CglKnapsackCover", "CglOddHole", "CglZeroHalf", "CglFlowCover", "CglGomory", "CglGMI", "CglRedSplit", "CglRedSplit2", "CglLiftAndProject", "CglLandP", "CglMixedIntegerRounding", "CglMixedIntegerRounding2", "CglTwomir", "CglResidualCapacity", "CglDuplicateRow", "CglPreProcess", "CglProbing", "CglSimpleRounding"]

# Combinatorial cuts:

CglAllDifferent = []
# CglBKClique = [] //for next version
CglClique = []
CglKnapsackCover = []
CglOddHole = []
# CglOddWheel = [] //for next version
CglZeroHalf = []

# flow cover cuts:
CglFlowCover = []

# Gomory cuts and variants:
CglGomory = ["with_clp"]
CglGMI = []
CglRedSplit = []
CglRedSplit2 = []

# Lift and project cuts:
CglLiftAndProject = []
CglLandP = ["CglGomory"]

# Mixed integer rounding cuts and variants:
CglMixedIntegerRounding = []
CglMixedIntegerRounding2 = []
CglTwomir = ["with_clp"]
CglResidualCapacity = []

# Strengthening:
# CglCliqueStrengthening = [] //for next version
CglDuplicateRow = []
CglPreProcess = []
CglProbing = []
CglSimpleRounding = []



[dependencies]
coinutils-src = "0.2"
osi-src = "0.2"
clp-src = { version = "0.2", default-features = false, optional = true}


[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
coin-build-tools = "0.2"
